first two use cases implemented
